# Operating-systems

lab10/: CMakeLists.txt  common.h  data_channel.sh  zad1.c  zad2k.c  zad2p.c
lab11/: CMakeLists.txt  zad1.cpp
lab12/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
lab4/: text1.txt  text2.txt  text3.txt  text4.txt  zad10.c  zad9.c
lab5/: a.out  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c
lab6/: zad1.c  zad2.c
lab7/: program  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c
lab8/: konsument.c  producent.c  zad1.cmd  zad2.c
lab9/: CMakeLists.txt  common.h  kalkulator.sh  konsument.c  konsument_v2.c  producent.c  producent_v2.c
zadania_na_ocene/MSGQUEUE/: CMakeLists.txt  README.md  konsument.c  producent.c
zadania_na_ocene/PIPE/: CMakeLists.txt  README.md  zadanie8.c
zadania_na_ocene/PROCESY2/: CMakeLists.txt  README.md  REVIEW.md  zadanie3.c
